[package]
name = "samplepage"
version = "0.1.0"
edition = "2021"
authors = ["Shogo Tsuchiya<shogo.tsuchiya@integral-g-k.work>"]
description = "Sample Actix page"

[dependencies]
actix-web="4"
serde={version = "1.0", features = ["derive"]}
env_logger="0.10"
log="0.4"
dotenv="0.15"
mysql = { version = "*", default-features = false, features = ["minimal"] }